infrastructure/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: app
        image: app
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5000
      restartPolicy: Always
