infrastructure/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: example
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: flask-app
  type: LoadBalancer
